2010-08-12  Patrice Dumas  <pertusus@free.fr>

	* texi2html/texi2html.pl (prepare_htmlxref): also use the
	manual input directory to search for htmlxref.cnf files.
	Karl idea.
	* texi2html/tests/Makefile.am: copy htmlxref files from references.
	* texi2html/Makefile.am: ship translations.pl to always have it
	in the srcdir for out of source build.

2010-08-11  Patrice Dumas  <pertusus@free.fr>

	* texi2html/texi2html.pl (enter_author_command): format the 
	@author text if not already done.  Check if command is @author
	is now done outside of the function.
	* texi2html/texi2html.pl (scan_line): prepare for detection of 
	commands that are not at the begining of the line though they 
	should be.  Mostly not activated, since modifications to the 
	processed line leads to spurious error messages.
	%begin_line_command hash holds all the commands that should
	be at the begining of the line.
	Don't treat sectioning commands like any heading command if they
	are not at the begining of the line.

2010-08-09  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Output Elements Defined): rename/edit from
	`The different elements'.

2010-08-09  Patrice Dumas  <pertusus@free.fr>

	* texi2html/texi2html.pl (pass_texi): add line numbers when adding
	text to close @-commands at the end of the first pass.

2010-08-08  Sergey Poznyakoff  <gray@gnu.org.ua>

	* info/indices.c (index_partial): New static variable.
	(index_entry_matches): New static function.
	(info_next_index_match): Use index_entry_matches to find
	exact matches. When exact matches are exhausted, look for
	partial matches, starting from the beginning of the index.
	When looking for partial matches, take care not to return
	previous exact matches. 

2010-08-08  Patrice Dumas  <pertusus@free.fr>

	* texi2html/texi2html.init, texi2html/texi2html.pl (do_text):
	warn if [](), appears inside @var. Report from Karl.
	* texi2html/texi2html.pl: accept a --reference-limit=N option
	for backward reference with makeinfo.
